# bitfetch

./: .gitignore  CMakeLists.txt  README.md
src/: bitfetch_design.cpp  fetchSystemInfo.cpp  fetch_info.cpp  main  main.cpp
src/include/: bitfetch_design.hpp  fetch_info.hpp
src/service/: fetchInfo.h  fetchSystemInfo.cpp
